k8s/tier2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gene-web
  labels:
    name: gene-web
